添加默认语言设置 页面渲染钩子缓存也替换

--- a/Qc.SampleauthSdk.Sample/appsettings.json
+++ b/Qc.SampleauthSdk.Sample/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "SampleauthSetting": {
-    "RoutePrefix": "swagger",
+    "RoutePrefix": "setting",
     "PathIsConvertToLower": true,
     "LoginPath": "c-login",
     "LogoutPath": "c-logout",
@@ -16,7 +16,8 @@
       "LoginPlaceholderUsername": "Please input username",
       "LoginPlaceholderUserpwd": "Please input userpwd",
       "LoginTextSubmitButton": "Log In",
-      "LoginTextErrorMsg": "username or userpwd error!"
+      "LoginTextErrorMsg": "username or userpwd error!",
+      "LoginTextPageLang": "en"
     }
   }
 }
